# aiqso-odoo-crm

./: .env.example  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Makefile  PORTAL_SETUP.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: backup.yml  ci.yml  deploy.yml  docs.yml  release.yml
api/: auth.py  background.py  deploy.sh  leads.py  main.py  mercury.py  notifications.py  odoo-api.service  reconciliation.py  requirements.txt  sync_state.py
docs/: CONFIGURATION.md  HELPDESK_ARCHITECTURE.md  HELPDESK_NEXT_STEPS.md  LEAD_LIST_STRUCTURE.md
docs/getting-started/: configuration.md
mcp-servers/odoo-crm/: server.py
mcp/odoo-crm-server/: pyproject.toml  server.py
n8n-workflows/: customer-onboard.json  daily-digest.json  lead-pipeline.json  odoo-client-won-to-zammad.json  source-health-monitor.json  stripe-webhook.json  zammad-odoo-sync.json  zammad-ticket-close-sync.json
scripts/: config.py  create_discovery_from_odoo.py  create_products.py  cron-sync.sh  health_check.py  import_commercial_leads.py  import_lead_list.py  invite_portal_user.py  push_solution_to_odoo.py  setup_stripe.py  sync_enriched_leads.py  sync_products.py
src/aiqso_crm/: __init__.py  categories.py  client.py  dedup.py  enrichment.py  models.py  scoring.py
tests/: test_client.py  test_config.py  test_dedup.py  test_import_commercial_leads.py  test_import_lead_list.py  test_models.py  test_scoring.py  test_sync_enriched_leads.py
