[project]
name = "aiqso-odoo-crm"
version = "0.9.0"
description = "AIQSO Odoo CRM platform - shared client library, lead management, and integrations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AIQSO", email = "quinn@aiqso.io" }]
keywords = ["odoo", "crm", "automation", "leads", "mcp"]

dependencies = [
    "pydantic>=2.5.0",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.6",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "types-psycopg2>=2.9.21",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["aiqso_crm*", "scripts*"]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert (acceptable in scripts)
    "B008",   # function call in default arg (argparse pattern)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = [
    "S603",   # subprocess untrusted input (scripts are CLI tools)
    "S607",   # partial executable path (acceptable in scripts)
]
"tests/*.py" = [
    "S101",   # use of assert (expected in tests)
    "S105",   # hardcoded passwords (test fixtures)
    "S106",   # hardcoded password argument (test fixtures)
]
"mcp/**/*.py" = [
    "S603",
    "S607",
]

[tool.ruff.lint.isort]
known-first-party = ["config", "aiqso_crm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# MyPy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
pretty = true
# Disable strict checks for scripts that work correctly at runtime
strict_optional = false
warn_unreachable = false
disable_error_code = ["union-attr", "var-annotated", "index", "attr-defined", "str-bytes-safe", "operator"]

[[tool.mypy.overrides]]
module = "psycopg2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xmlrpc.*"
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
